--- a/index.html
+++ b/index.html
@@ -60,25 +60,7 @@
         </div>
       </section>
     </header>
-    <main >
-      <!--<section class="slider">
-        <div class="slider-content clearfix container">
-          <div class="slider-content-left">
-            <div class="slider-slogan">
-              Долго, дорого,<br>скрупулезно
-            </div>
-            <p>Математически выверенный дизайн<br>
-              для вашего сайта или мобильного приложения.
-            </p>
-            <a class="more" href="#">Узнать больше</a>
-          </div>
-          <div class="slider-content-right">
-            <div class="slider-logo">
-              <img class="slider-logo-img" src="img/index/slider-1.png" width="338" height="231" alt="">
-              </div>
-          </div>
-        </div>
-      </section>!-->
+    <main >    
        
       <section class="features clearfix container">
         <div class="features-item">
@@ -113,14 +95,14 @@
         </div>
       </section>
       <section class="about-company clearfix">
-        <div class="about-company-content container">
+        <div class="about-company-content container clearfix">
           <div class="about-company-content-left">
             <div class="about-container-left">
-              <div class="about-company-slogan">Мы-мальнькая,но гордая<br>
+              <div class="about-company-slogan">Мы &#8212; мальнькая, но гордая<br>
                 дизайн-студия из Краснодара.
               </div>
-              <p class="about-company-desc">Исповедуем принципы минимализма и чистоты.Ставим математический<br>
-                расчет выше креатива.Работаем не покладая рук,как роботы.
+              <p class="about-company-desc">Исповедуем принципы минимализма и чистоты. Ставим математический<br>
+                расчет выше креатива. Работаем не покладая рук,как роботы.
               </p>
             </div>
             <div class="aside-content-left">
@@ -141,10 +123,10 @@
             </div>
             <div class="aside-content-right">
               <h2 class="aside-content-title aside-right">Как мы работаем:</h2>
-              <ul class="aside-menu">
-                <li class="aside-item">С самоотдачей 146%</li>
-                <li class="aside-item">Соблюдая сроки на 100%</li>
-                <li class="aside-item">По предоплате 50%</li>
+              <ul class="aside-menu aside-right">
+                <li class="aside-item-right">С самоотдачей 146%</li>
+                <li class="aside-item-right">Соблюдая сроки на 100%</li>
+                <li class="aside-item-right">По предоплате 50%</li>
               </ul>
             </div>
           </div>
@@ -159,11 +141,11 @@
       </section>
     </main>
     <footer class="main-footer clearfix">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="1345" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
       <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
         <div class="contacts-adress-item"> 191186, Санкт-Петербург
-          ул.Б.Коннюшенная, д.19/8
+          ул.Б.Конюшенная, д.19/8
         </div>
         <div class="contacts-adress-item">
           тел.+7(812)275-75-75
@@ -189,11 +171,11 @@
     <div class="modal-content clearfix">
      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
      <form class="user-form" action="form.php" method="get">
-     <div class="modal-content-left-rows"
+     <div class="modal-content-left-rows">
      <label for="user-name">Ваше имя:</label><br>
      <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
      </div>
-     <div class="modal-content-right-rows"
+     <div class="modal-content-right-rows">
      <label for="user-mail">Ваш e-mail:</label><br>
      <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
      </div>
