--- a/catalog.html
+++ b/catalog.html
@@ -37,10 +37,10 @@
             <li><a href="#">По типу</a></li>
             <li><a href="#">По функционалу</a></li>
             </ul>
-            <!--<div class="catalog-filter-triangles">            
+            <span class="catalog-filter-triangles">            
             <a href="#" id="triangle-up"></a>
             <a href="#" id="triangle-down"></a>            
-            </div>не стилизуются стрелки !-->
+            </span>
         </div>
         <article class="catalog-item">
           <div class="catalog-content">
@@ -126,13 +126,13 @@
           <div class="toggle toggle-max"></div>
         </div>
         <div class="price-controls">
-          <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-          <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+          <label class="min-price">ОТ <input name="min-price" type="text" value="0"></label>
+          <label class="max-price">ДО <input name="max-price" type="text" value="15000"></label>
         </div>
       </div>
       </fieldset>
           <fieldset>
-            <legend class="sidebar-title">Сетка:</legend>
+            <legend class="sidebar-title first-legend">Сетка:</legend>
             <ul>            
             <li><input type="radio" name="grid" value="Адаптивная" id="grid-item-1">
             <label for="grid-item-1">Адаптивная</label></li>
@@ -146,21 +146,21 @@
             </ul>
           </fieldset>
           <fieldset>
-            <legend class="sidebar-title">Особенности:</legend>
+            <legend class="sidebar-title second-legend">Особенности:</legend>
             <ul>
-            <li><input type="checkbox" name="features" id="features-item-1">
+            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-1">
             <label for="features-item-1">Слайдер</label></li>
 
-            <li><input type="checkbox" name="features" id="features-item-2">          
+            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-2">          
             <label for="features-item-2">Блок приемуществ</label></li>
 
-            <li><input type="checkbox" name="features" id="features-item-3">           
+            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-3">           
             <label for="features-item-3">Новости</label></li>
 
-            <li><input type="checkbox" name="features" id="features-item-4">           
+            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-4">           
             <label for="features-item-4">Галерея</label></li>
 
-            <li><input type="checkbox" name="features" id="features-item-5">            
+            <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-5">            
             <label for="features-item-5">Корзина</label></li>
             </ul>     
 
@@ -169,9 +169,9 @@
           </form>          
       </div>      
     </main>
-    <footer class="main-footer">
-     <img class="main-footer-map" src="img/index/map-1.jpg" width="100%"  height="416" alt="">
-     <div class="contacts-adress">
+        <footer class="main-footer clearfix">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+     <div class="contacts-adress"
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
         <div class="contacts-adress-item"> 191186, Санкт-Петербург
           ул.Б.Коннюшенная, д.19/8
@@ -214,5 +214,56 @@
          <button class="btn" type="submit">Отправить</button>
      </form>      
     </div>
+     <script>
+      var link = document.querySelector(".contacts-adress-btn");
+
+      var popup = document.querySelector(".modal-content");
+      var close = popup.querySelector(".modal-content-close");
+
+      var form = popup.querySelector("form");
+      var login = popup.querySelector("[name=user-name]");
+      var password = popup.querySelector("[name=user-mail]");
+
+      var storage = localStorage.getItem("login");
+
+      link.addEventListener("click", function(event) {
+        event.preventDefault();
+        popup.classList.add("modal-content-show");
+
+        if (storage) {
+          login.value = storage;
+          password.focus();
+        } else {
+          login.focus();
+        }
+
+      });
+
+      close.addEventListener("click", function(event) {
+        event.preventDefault();
+        popup.classList.remove("modal-content-show");
+        popup.classList.remove("modal-error");
+      });
+
+      form.addEventListener("submit", function(event) {
+        if (!login.value || !password.value) {
+          event.preventDefault();
+          popup.classList.remove("modal-error");
+          popup.offsetWidth = popup.offsetWidth;
+          popup.classList.add("modal-error");
+        } else {
+          localStorage.setItem("login", login.value);
+        }
+      });
+
+      window.addEventListener("keydown", function(event) {
+        if (event.keyCode === 27) {
+          if (popup.classList.contains("modal-content-show")) {
+            popup.classList.remove("modal-content-show");
+            popup.classList.remove("modal-error");
+          }
+        }
+      });
+    </script>
   </body>
 </html>
