--- a/catalog.html
+++ b/catalog.html
@@ -107,7 +107,7 @@
           </div>
         </article>
         <div class="catalog-pagination">  
-          <a href="#" class="catalog-btn" >1</a>
+          <a href="#" class="catalog-btn active" >1</a>
           <a href="#" class="catalog-btn" >2</a>
           <a href="#" class="catalog-btn" >3</a>
           <a href="#" class="catalog-btn catalog-next" >Следующая</a>
