--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
         <div class="catalog-filter">         
           <ul>
             <li>Сортировать:</li>
-            <li><a href="#">По цене</a></li>
+            <li><a href="#" class="active">По цене</a></li>
             <li><a href="#">По типу</a></li>
             <li><a href="#">По функционалу</a></li>
             </ul>
