--- a/catalog.html
+++ b/catalog.html
@@ -38,14 +38,14 @@
             <li><a href="#">По функционалу</a></li>
             </ul>
             <span class="catalog-filter-triangles">            
-            <a href="#" id="triangle-up"></a>
+            <a href="#" id="triangle-up" class="active"></a>
             <a href="#" id="triangle-down"></a>            
             </span>
         </div>
         <article class="catalog-item">
           <div class="catalog-content">
           <div class="catalog-content-desc">
-          <h4>Aviator</h4>
+          <a href="#"><h4>Aviator</h4></a>
           <p>Одностраничный макет<br>с авторским дизайном</p>
           <a href="#" class="btn">8000 р</a>            
           </div>
@@ -56,7 +56,7 @@
         <article class="catalog-item">
           <div class="catalog-content">
           <div class="catalog-content-desc">
-          <h4>Sunset</h4>
+          <a href="#"><h4>Sunset</h4></a>
           <p>Интернет-магазин<br>с личным кабинетом</p>
           <a href="#" class="btn">10000 р</a>            
           </div>
@@ -67,7 +67,7 @@
         <article class="catalog-item">
           <div class="catalog-content">
           <div class="catalog-content-desc">
-          <h4>Forte</h4>
+          <a href="#"><h4>Forte</h4></a>
           <p>Отличный макет <br>для личного блога</p>
           <a href="#" class="btn">5000 р</a>            
           </div>
@@ -78,7 +78,7 @@
         <article class="catalog-item">
           <div class="catalog-content">
           <div class="catalog-content-desc">
-          <h4>Modern organic<br> tai</h4>
+          <a href="#"><h4>Modern organic<br>tai</h4></a>
           <p>Сайт для ресторана<br>быстрого питания</p>
           <a href="#" class="btn">12000 р</a>            
           </div>        
@@ -88,7 +88,7 @@
         <article class="catalog-item">
           <div class="catalog-content">
           <div class="catalog-content-desc">
-          <h4>Avenue</h4>
+          <a href="#"><h4>Avenue</h4></a>
           <p>Макет для блога<br>о путешествиях</p>
           <a href="#" class="btn">8000 р</a>            
           </div>
@@ -99,7 +99,7 @@
         <article class="catalog-item">
           <div class="catalog-content">
           <div class="catalog-content-desc">
-          <h4>Dovetail</h4>
+          <a href="#"><h4>Dovetail</h4></a>
           <p>Интернет магазин <br>с галереей товаров</p>
           <a href="#" class="btn">8000 р</a>            
           </div>
