--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <div class="container clearfix">
         <div class="index-logo">
           <a>
-          <img class="index-logo-img" src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>         
+          <img class="index-logo-img" src="img/logo.png" width="139" height="56" alt="Логотип"></a>         
         </div>
         <nav class="main-navigation">
           <ul>
             <li><a class="active">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
-            <li><a href="#">Магазин</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
@@ -65,7 +65,7 @@
       <section class="features clearfix container">
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-1.jpg" width="240" height="124" alt="Лого раздела приемущества">
+            <img src="img/Layer-1.jpg" width="240" height="124" alt="Лого раздела приемущества">
           </div>
           <h2 class="features-name">Веб-сайты</h2>
           <p class="features-desc">Мир никогда не будет прежним
@@ -75,7 +75,7 @@
         </div>
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-3.jpg" width="240" height="124" alt="Лого раздела приемущества">
+            <img src="img/Layer-3.jpg" width="240" height="124" alt="Лого раздела приемущества">
           </div>
           <h2 class="features-name">Приложения</h2>
           <p class="features-desc">Покорите топ-10 приложений<br>
@@ -85,7 +85,7 @@
         </div>
         <div class="features-item">
           <div class="features-image">
-            <img src="img/index/Layer-2.jpg" width="240" height="124" alt="Лого раздела приемущества">
+            <img src="img/Layer-2.jpg" width="240" height="124" alt="Лого раздела приемущества">
           </div>
           <h2 class="features-name">Презентации</h2>
           <p class="features-desc">Вы даже не подозреваете<br>
@@ -117,7 +117,7 @@
           <div class="about-company-content-right">
             <div class="about-container-right">
               <div class="about-company-logo">
-                <img src="img/index/logo-1.png" width="187" height="75" alt="Лого Нёрдс">
+                <img src="img/logo-1.png" width="187" height="75" alt="Лого Нёрдс">
               </div>
               <div class="about-company-since">SINCE 2004</div>
             </div>
@@ -134,9 +134,9 @@
       </section>
       <section class="gallery container ">
         <ul>
-          <li><a href="#"><img class="gallery-item-1" src="img/index/partner-1.png" width="198" height="37" alt="Лого Партнерская сеть"></a></li>
-          <li><a href="#"><img class="gallery-item-2" src="img/index/partner-2.png" width="199" height="68" alt="Лого Партнерская сеть"></a></li>
-          <li><a href="#"><img class="gallery-item-3" src="img/index/partner-3.png" width="209" height="86" alt="Лого Партнерская сеть"></a></li>
+          <li><a href="#"><img class="gallery-item-1" src="img/partner-1.png" width="198" height="37" alt="Лого Партнерская сеть"></a></li>
+          <li><a href="#"><img class="gallery-item-2" src="img/partner-2.png" width="199" height="68" alt="Лого Партнерская сеть"></a></li>
+          <li><a href="#"><img class="gallery-item-3" src="img/partner-3.png" width="209" height="86" alt="Лого Партнерская сеть"></a></li>
         </ul>
       </section>
     </main>
