--- a/catalog.html
+++ b/catalog.html
@@ -11,12 +11,12 @@
     <header class="main-header-catalog">
       <div class="container clearfix">
         <div class="index-logo">
-          <a >
-          <img class="index-logo-img" src="img/index/logo.png" width="139" height="56" alt="Логотип"></a>         
+          <a href="index.html" >
+          <img class="index-logo-img" src="img/logo.png" width="139" height="56" alt="Логотип"></a>         
         </div>
         <nav class="main-navigation">
           <ul>
-            <li><a href="#">Студия</a></li>
+            <li><a href="index.html">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
             <li><a class="active">Магазин</a></li>
             <li><a href="#">Контакты</a></li>
@@ -49,7 +49,7 @@
           <p>Одностраничный макет<br>с авторским дизайном</p>
           <a href="#" class="btn">8000 р</a>            
           </div>
-            <img src="img/catalog/items-1.jpg" width="240" height="240" alt="">
+            <img src="img/items-1.jpg" width="240" height="240" alt="">
           </div>
 
         </article>
@@ -60,7 +60,7 @@
           <p>Интернет-магазин<br>с личным кабинетом</p>
           <a href="#" class="btn">10000 р</a>            
           </div>
-            <img class="catalog-content-img" src="img/catalog/items-2.jpg" width="240" height="240" alt="">
+            <img class="catalog-content-img" src="img/items-2.jpg" width="240" height="240" alt="">
           </div>
         </article>
 
@@ -71,7 +71,7 @@
           <p>Отличный макет <br>для личного блога</p>
           <a href="#" class="btn">5000 р</a>            
           </div>
-            <img src="img/catalog/items-3.jpg" width="240" height="240" alt="">
+            <img src="img/items-3.jpg" width="240" height="240" alt="">
           </div>
         </article>
 
@@ -82,7 +82,7 @@
           <p>Сайт для ресторана<br>быстрого питания</p>
           <a href="#" class="btn">12000 р</a>            
           </div>        
-            <img src="img/catalog/items-4.jpg" width="240" height="240" alt="">
+            <img src="img/items-4.jpg" width="240" height="240" alt="">
           </div>
         </article>
         <article class="catalog-item">
@@ -92,7 +92,7 @@
           <p>Макет для блога<br>о путешествиях</p>
           <a href="#" class="btn">8000 р</a>            
           </div>
-            <img src="img/catalog/items-5.jpg" width="240" height="240" alt="">
+            <img src="img/items-5.jpg" width="240" height="240" alt="">
           </div>
         </article>
 
@@ -103,7 +103,7 @@
           <p>Интернет магазин <br>с галереей товаров</p>
           <a href="#" class="btn">8000 р</a>            
           </div>
-            <img src="img/catalog/items-6.jpg" width="240" height="240" alt="">
+            <img src="img/items-6.jpg" width="240" height="240" alt="">
           </div>
         </article>
         <div class="catalog-pagination">  
@@ -145,7 +145,7 @@
 
             </ul>
           </fieldset>
-          <fieldset>
+          <fieldset class="last-fieldset">
             <legend class="sidebar-title second-legend">Особенности:</legend>
             <ul>
             <li class="sidebar-item"><input type="checkbox" name="features" id="features-item-1">
@@ -169,44 +169,44 @@
           </form>          
       </div>      
     </main>
-        <footer class="main-footer clearfix">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-     <div class="contacts-adress"
+           <footer class="main-footer clearfix">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123688!2d30.32089461570254!3d59.93879686904841!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0KDQvtGB0ZbRjywgMTkxMTg2!5e0!3m2!1suk!2s!4v1472509188440" width="1345" height="420" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <div class="contacts-adress">
         <h2 class="contacts-adress-title">NERDS Design Studio</h2>
         <div class="contacts-adress-item"> 191186, Санкт-Петербург
-          ул.Б.Коннюшенная, д.19/8
+          ул.Б.Конюшенная, д.19/8
         </div>
         <div class="contacts-adress-item">
           тел.+7(812)275-75-75
         </div>
         <a href="#" class="contacts-adress-btn">Напишите нам</a>
       </div>
-      <div class="container">       
+      <div class="container">
         <div class="footer-content-left">
           <div class="footer-content-social">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            <a class="social-btn social-btn-vk" href="#">VK</a>
+            <a class="social-btn social-btn-fb" href="#">FB</a>
+            <a class="social-btn social-btn-inst" href="#">IN</a>
           </div>
         </div>
         <div class="footer-content-right">
           <div class="footer-content-aside">
-           <div class="footer-slogan">Давайте дружить, это выгодно</div>
+            <div class="footer-slogan">Давайте дружить, это выгодно</div>
             <p>Скидка 10% для друзей из социальных сетей</p>
           </div>
         </div>
       </div>
-    </footer>
+    </footer>    
     <div class="modal-content clearfix">
      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
      <form class="user-form" action="form.php" method="get">
-     <div class="modal-content-left-rows"
-     <label for="user-name"> Ваше имя:</label><br>
-     <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста">
+     <div class="modal-content-left-rows">
+     <label for="user-name">Ваше имя:</label><br>
+     <input type="text" name="user-name" id="user-name" placeholder="Представтесь пожалуйста" >
      </div>
-     <div class="modal-content-right-rows"
+     <div class="modal-content-right-rows">
      <label for="user-mail">Ваш e-mail:</label><br>
-     <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа">     
+     <input type="text" name="user-mail" id="user-mail" placeholder="Для отправки ответа" >     
      </div>
      <label for="user-comment">Текст письма</label>
     <textarea name="user-comment" id="user-comment" cols="74" rows="10">В свободной форме       
